istioctl/cmd/testdata/describe/istio-ingressgateway-5bf6c9887-vvvmj.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "router~172.30.229.137~istio-ingressgateway-5bf6c9887-vvvmj.istio-system~istio-system.svc.cluster.local",
     "cluster": "istio-ingressgateway",
     "metadata": {
      "SERVICE_ACCOUNT": "istio-ingressgateway-service-account",
      "CONFIG_NAMESPACE": "istio-system",
      "OWNER": "kubernetes://api/apps/v1/namespaces/istio-system/deployments/istio-ingressgateway",
      "WORKLOAD_NAME": "istio-ingressgateway",
      "ISTIO_VERSION": "1.3.0",
      "ROUTER_MODE": "sni-dnat",
      "POD_NAME": "istio-ingressgateway-5bf6c9887-vvvmj",
      "istio": "sidecar",
      "ISTIO_PROXY_SHA": "istio-proxy:48bc83d8f0582fc060ef76d5aa3d75400e739d9e",
      "NAME": "istio-ingressgateway-5bf6c9887-vvvmj",
      "NAMESPACE": "istio-system",
      "EXCHANGE_KEYS": "NAME,NAMESPACE,INSTANCE_IPS,LABELS,OWNER,PLATFORM_METADATA,WORKLOAD_NAME,MESH_ID,SERVICE_ACCOUNT,CLUSTER_ID",
      "INSTANCE_IPS": "172.30.229.137,fe80::a489:41ff:fe62:f150"
     },
     "locality": {},
     "build_version": "48bc83d8f0582fc060ef76d5aa3d75400e739d9e/1.12.0-dev/Clean/RELEASE/BoringSSL"
    },
    "static_resources": {
     "listeners": [
      {
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 15090
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "config": {
            "codec_type": "AUTO",
            "http_filters": {
             "name": "envoy.router"
            },
            "stat_prefix": "stats",
            "route_config": {
          "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
            "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
             "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
             "virtual_hosts": [
              {
               "routes": [
                {
                 "route": {
                  "cluster": "prometheus_stats"
                 },
                 "match": {
                  "prefix": "/stats/prometheus"
                 }
                }
               ],
               "domains": [
                "*"
               ],
               "name": "backend"
              }
             ]
            }
           }
          }
         ]
        }
       ]
      }
     ],
     "clusters": [
      {
       "name": "prometheus_stats",
       "type": "STATIC",
       "connect_timeout": "0.250s",
       "hosts": [
        {
         "socket_address": {
          "address": "127.0.0.1",
          "port_value": 15000
         }
        }
       ]
      },
      {
       "name": "xds-grpc",
       "type": "STRICT_DNS",
       "connect_timeout": "10s",
       "hosts": [
        {
         "socket_address": {
          "address": "istio-pilot",
          "port_value": 15010
         }
        }
       ],
       "circuit_breakers": {
        "thresholds": [
         {
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         },
         {
          "priority": "HIGH",
          "max_connections": 100000,
          "max_pending_requests": 100000,
          "max_requests": 100000
         }
        ]
       },
       "http2_protocol_options": {},
       "dns_refresh_rate": "300s",
       "dns_lookup_family": "V4_ONLY",
       "upstream_connection_options": {
        "tcp_keepalive": {
         "keepalive_time": 300
        }
       }
      },
      {
       "name": "zipkin",
       "type": "STRICT_DNS",
       "connect_timeout": "1s",
       "hosts": [
        {
         "socket_address": {
          "address": "zipkin",
          "port_value": 9411
         }
        }
       ],
       "dns_refresh_rate": "300s",
       "dns_lookup_family": "V4_ONLY"
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds-grpc"
        }
       }
      ]
     }
    },
    "tracing": {
     "http": {
      "name": "envoy.zipkin",
      "config": {
       "collector_endpoint": "/api/v1/spans",
       "collector_cluster": "zipkin",
       "trace_id_128bit": "true",
       "shared_span_context": "false"
      }
     }
    },
    "admin": {
     "access_log_path": "/dev/null",
     "address": {
      "socket_address": {
       "address": "127.0.0.1",
       "port_value": 15000
      }
     }
    },
    "stats_config": {
     "stats_tags": [
      {
       "tag_name": "cluster_name",
       "regex": "^cluster\\.((.+?(\\..+?\\.svc\\.cluster\\.local)?)\\.)"
      },
      {
       "tag_name": "tcp_prefix",
       "regex": "^tcp\\.((.*?)\\.)\\w+?$"
      },
      {
       "tag_name": "response_code",
       "regex": "(response_code=\\.=(.+?);\\.;)|_rq(_(\\.d{3}))$"
      },
      {
       "tag_name": "response_code_class",
       "regex": "_rq(_(\\dxx))$"
      },
      {
       "tag_name": "http_conn_manager_listener_prefix",
       "regex": "^listener(?=\\.).*?\\.http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "http_conn_manager_prefix",
       "regex": "^http\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "listener_address",
       "regex": "^listener\\.(((?:[_.[:digit:]]*|[_\\[\\]aAbBcCdDeEfF[:digit:]]*))\\.)"
      },
      {
       "tag_name": "mongo_prefix",
       "regex": "^mongo\\.(.+?)\\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$"
      },
      {
       "tag_name": "reporter",
       "regex": "(reporter=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_namespace",
       "regex": "(source_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_workload",
       "regex": "(source_workload=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_workload_namespace",
       "regex": "(source_workload_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_principal",
       "regex": "(source_principal=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_app",
       "regex": "(source_app=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "source_version",
       "regex": "(source_version=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_namespace",
       "regex": "(destination_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_workload",
       "regex": "(destination_workload=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_workload_namespace",
       "regex": "(destination_workload_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_principal",
       "regex": "(destination_principal=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_app",
       "regex": "(destination_app=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_version",
       "regex": "(destination_version=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_service",
       "regex": "(destination_service=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_service_name",
       "regex": "(destination_service_name=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "destination_service_namespace",
       "regex": "(destination_service_namespace=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "request_protocol",
       "regex": "(request_protocol=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "response_flags",
       "regex": "(response_flags=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "connection_security_policy",
       "regex": "(connection_security_policy=\\.=(.+?);\\.;)"
      },
      {
       "tag_name": "cache",
       "regex": "(cache\\.(.+?)\\.)"
      }
     ],
     "use_all_default_tags": false,
     "stats_matcher": {
      "inclusion_list": {
       "patterns": [
        {
         "prefix": "reporter="
        },
        {
         "prefix": "cluster_manager"
        },
        {
         "prefix": "listener_manager"
        },
        {
         "prefix": "http_mixer_filter"
        },
        {
         "prefix": "tcp_mixer_filter"
        },
        {
         "prefix": "server"
        },
        {
         "prefix": "cluster.xds-grpc"
        },
        {
         "suffix": "ssl_context_update_by_sds"
        }
       ]
      }
     }
    }
   },
   "last_updated": "2019-09-20T20:10:15.857Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
   "version_info": "2019-09-20T20:10:05Z/7",
   "static_clusters": [
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "prometheus_stats",
      "type": "STATIC",
      "connect_timeout": "0.250s",
      "hosts": [
       {
        "socket_address": {
         "address": "127.0.0.1",
         "port_value": 15000
        }
       }
      ]
     },
     "last_updated": "2019-09-20T20:10:15.861Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "xds-grpc",
      "type": "STRICT_DNS",
      "connect_timeout": "10s",
      "hosts": [
       {
        "socket_address": {
         "address": "istio-pilot",
         "port_value": 15010
        }
       }
      ],
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        },
        {
         "priority": "HIGH",
         "max_connections": 100000,
         "max_pending_requests": 100000,
         "max_requests": 100000
        }
       ]
      },
      "http2_protocol_options": {},
      "dns_refresh_rate": "300s",
      "dns_lookup_family": "V4_ONLY",
      "upstream_connection_options": {
       "tcp_keepalive": {
        "keepalive_time": 300
       }
      }
     },
     "last_updated": "2019-09-20T20:10:15.871Z"
    },
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "zipkin",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
       {
        "socket_address": {
         "address": "zipkin",
         "port_value": 9411
        }
       }
      ],
      "dns_refresh_rate": "300s",
      "dns_lookup_family": "V4_ONLY"
     },
     "last_updated": "2019-09-20T20:10:15.871Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "BlackHoleCluster",
      "type": "STATIC",
      "connect_timeout": "10s"
     },
     "last_updated": "2019-09-20T20:10:16.250Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "PassthroughCluster",
      "type": "ORIGINAL_DST",
      "connect_timeout": "10s",
      "lb_policy": "CLUSTER_PROVIDED",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_connections": 102400,
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.250Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15010_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.260Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15011_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.260Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15014_._.istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15014_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.258Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15014_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15014_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.257Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15014_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15014_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.260Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15014_._.istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15014_._.istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.261Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15020_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15020_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.258Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15029_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.259Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15030_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.259Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15031_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.259Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15032_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.259Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.15443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.259Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.1_._.ff.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.1_._.ff.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.255Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.31400_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.259Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.44134_._.tiller-deploy.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.44134_._.tiller-deploy.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.252Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.443_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.257Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.443_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.258Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.443_._.istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.260Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.443_._.kubernetes-dashboard.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.443_._.kubernetes-dashboard.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.251Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.443_._.kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.443_._.kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.251Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.443_._.metrics-server.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.443_._.metrics-server.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.251Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.443_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.443_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.252Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.5000_._.helloworld-v1.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.5000_._.helloworld-v1.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.254Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.5000_._.helloworld.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.5000_._.helloworld.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.254Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.53_._.kube-dns.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.53_._.kube-dns.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.251Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.7199_._.cassandra.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.7199_._.cassandra.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.253Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8000_._.httpbin.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8000_._.httpbin.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.254Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8000_._.kubernetes-terminal.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8000_._.kubernetes-terminal.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.252Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8060_._.istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.258Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8079_._.fortio-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8079_._.fortio-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.253Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8080_._.fortio-client.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8080_._.fortio-client.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.253Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8080_._.fortio-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8080_._.fortio-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.253Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8080_._.istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.260Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8080_._.redis-client.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8080_._.redis-client.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.254Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.80_._.analyzer.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.80_._.analyzer.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.252Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.80_._.istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.258Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.80_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.80_._.public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.252Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.80_._.sleep.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.80_._.sleep.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.254Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.8888_._.myhost.tcp.svc",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.8888_._.myhost.tcp.svc"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.252Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9000_._.tcp-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9000_._.tcp-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/tcp-echo-destination"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.253Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9000_.v1_.tcp-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9000_.v1_.tcp-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/tcp-echo-destination"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.253Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9000_.v2_.tcp-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9000_.v2_.tcp-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/tcp-echo-destination"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.254Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9042_._.cassandra.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9042_._.cassandra.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.253Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_._.details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_._.details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.255Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_._.productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_._.productpage.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/productpage"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.257Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_._.ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_._.ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.255Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_._.reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_._.reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.256Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v1_.details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v1_.details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.255Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v1_.productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v1_.productpage.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/productpage"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.257Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v1_.ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v1_.ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.256Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v1_.reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v1_.reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.256Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v2-mysql-vm_.ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v2-mysql-vm_.ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.256Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v2-mysql_.ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v2-mysql_.ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.256Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v2_.details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v2_.details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.255Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v2_.ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v2_.ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.256Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v2_.reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v2_.reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.257Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9080_.v3_.reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9080_.v3_.reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.257Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9090_._.prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.260Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9153_._.kube-dns.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9153_._.kube-dns.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.251Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound_.9901_._.istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.258Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15010||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-09-20T20:10:16.249Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15011||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.249Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15014||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15014||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.247Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15014||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15014||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.247Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15014||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15014||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.250Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15014||istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15014||istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.250Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15020||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15020||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.248Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15029||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.248Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15030||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.249Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15031||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.249Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15032||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.249Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|15443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.249Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|1||ff.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|1||ff.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.225Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|31400||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.248Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|44134||tiller-deploy.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|44134||tiller-deploy.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.223Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|443||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|443||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.247Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|443||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.248Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|443||istio-sidecar-injector.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.250Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|443||kubernetes-dashboard.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|443||kubernetes-dashboard.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.222Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|443||kubernetes.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|443||kubernetes.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.221Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|443||metrics-server.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|443||metrics-server.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.222Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|443||public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|443||public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.222Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|5000||helloworld-v1.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|5000||helloworld-v1.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.225Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|5000||helloworld.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|5000||helloworld.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.225Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|53||kube-dns.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|53||kube-dns.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.221Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|7199||cassandra.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|7199||cassandra.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.223Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8000||httpbin.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8000||httpbin.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.225Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8000||kubernetes-terminal.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8000||kubernetes-terminal.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.222Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8060||istio-citadel.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-09-20T20:10:16.247Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8079||fortio-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8079||fortio-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-09-20T20:10:16.223Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8080||fortio-client.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8080||fortio-client.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.224Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8080||fortio-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8080||fortio-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.223Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.250Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8080||redis-client.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8080||redis-client.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.224Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|80||analyzer.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|80||analyzer.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.222Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|80||istio-ingressgateway.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-09-20T20:10:16.248Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|80||public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|80||public-cr943f03ffec22400ba82dd6abf6a21cd9-alb1.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.222Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|80||sleep.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|80||sleep.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.225Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|8888||myhost.tcp.svc",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|8888||myhost.tcp.svc"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.223Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9000|v1|tcp-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9000|v1|tcp-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/tcp-echo-destination"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.224Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9000|v2|tcp-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9000|v2|tcp-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/tcp-echo-destination"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.224Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9000||tcp-echo.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9000||tcp-echo.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/tcp-echo-destination"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.224Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9042||cassandra.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9042||cassandra.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.223Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v1|details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v1|details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-details"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v1_.details.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.228Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v1|productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v1|productpage.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-productpage"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v1_.productpage.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/productpage"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.247Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v1|ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v1|ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-ratings"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v1_.ratings.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.233Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v1|reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v1|reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-reviews"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v1_.reviews.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.240Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v2-mysql-vm|ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v2-mysql-vm|ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-ratings"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v2-mysql-vm_.ratings.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.237Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v2-mysql|ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v2-mysql|ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-ratings"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v2-mysql_.ratings.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.236Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v2|details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v2|details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-details"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v2_.details.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.230Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v2|ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v2|ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-ratings"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v2_.ratings.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.234Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v2|reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v2|reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-reviews"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v2_.reviews.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.242Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080|v3|reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080|v3|reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-reviews"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_.v3_.reviews.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.244Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080||details.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080||details.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-details"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.details.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/details"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.227Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080||productpage.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080||productpage.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-productpage"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.productpage.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/productpage"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.245Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080||ratings.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080||ratings.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-ratings"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.ratings.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/ratings"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.231Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9080||reviews.default.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9080||reviews.default.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "tls_context": {
       "common_tls_context": {
        "tls_certificates": [
         {
          "certificate_chain": {
           "filename": "/etc/certs/cert-chain.pem"
          },
          "private_key": {
           "filename": "/etc/certs/key.pem"
          }
         }
        ],
        "validation_context": {
         "trusted_ca": {
          "filename": "/etc/certs/root-cert.pem"
         },
         "verify_subject_alt_name": [
          "spiffe://cluster.local/ns/default/sa/bookinfo-reviews"
         ]
        },
        "alpn_protocols": [
         "istio"
        ]
       },
       "sni": "outbound_.9080_._.reviews.default.svc.cluster.local"
      },
      "metadata": {
       "filter_metadata": {
        "istio": {
         "config": "/apis/networking/v1alpha3/namespaces/default/destination-rule/reviews"
        }
       }
      }
     },
     "last_updated": "2019-09-20T20:10:16.239Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9090||prometheus.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9090||prometheus.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.250Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9153||kube-dns.kube-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9153||kube-dns.kube-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      }
     },
     "last_updated": "2019-09-20T20:10:16.221Z"
    },
    {
     "version_info": "2019-09-20T20:10:05Z/7",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "outbound|9901||istio-galley.istio-system.svc.cluster.local",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "ads": {},
        "initial_fetch_timeout": "0s"
       },
       "service_name": "outbound|9901||istio-galley.istio-system.svc.cluster.local"
      },
      "connect_timeout": "10s",
      "circuit_breakers": {
       "thresholds": [
        {
         "max_retries": 1024
        }
       ]
      },
      "http2_protocol_options": {
       "max_concurrent_streams": 1073741824
      }
     },
     "last_updated": "2019-09-20T20:10:16.247Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
   "version_info": "2019-09-20T20:10:05Z/7",
   "static_listeners": [
    {
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 15090
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "config": {
           "codec_type": "AUTO",
           "http_filters": {
            "name": "envoy.router"
           },
           "stat_prefix": "stats",
           "route_config": {
          "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
            "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
            "virtual_hosts": [
             {
              "routes": [
               {
                "route": {
                 "cluster": "prometheus_stats"
                },
                "match": {
                 "prefix": "/stats/prometheus"
                }
               }
              ],
              "domains": [
               "*"
              ],
              "name": "backend"
             }
            ]
           }
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-09-20T20:10:15.875Z"
    }
   ],
   "dynamic_listeners": [
    {"active_state" :{
     "version_info": "2019-09-20T20:10:05Z/7",
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "name": "0.0.0.0_80",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 80
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.http_connection_manager",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
           "stat_prefix": "0.0.0.0_80",
           "rds": {
            "config_source": {
             "ads": {},
             "initial_fetch_timeout": "0s"
            },
            "route_config_name": "http.80"
           },
           "http_filters": [
            {
             "name": "envoy.cors"
            },
            {
             "name": "envoy.fault"
            },
            {
             "name": "envoy.router"
            }
           ],
           "tracing": {
            "operation_name": "EGRESS",
            "client_sampling": {
             "value": 100
            },
            "random_sampling": {
             "value": 1
            },
            "overall_sampling": {
             "value": 100
            }
           },
           "http_protocol_options": {},
           "server_name": "istio-envoy",
           "use_remote_address": true,
           "generate_request_id": true,
           "forward_client_cert_details": "SANITIZE_SET",
           "set_current_client_cert_details": {
            "subject": true,
            "cert": true,
            "dns": true,
            "uri": true
           },
           "upgrade_configs": [
            {
             "upgrade_type": "websocket"
            }
           ],
           "stream_idle_timeout": "0s",
           "normalize_path": true
          }
         }
        ]
       }
      ],
      "listener_filters_timeout": "0.100s",
      "traffic_direction": "OUTBOUND",
      "continue_on_listener_filters_timeout": true
     },
     "last_updated": "2019-09-20T20:10:16.267Z"
    }},
    {"active_state" :{
     "version_info": "2019-09-20T20:10:05Z/7",
     "listener": {
      "@type": "type.googleapis.com/envoy.api.v2.Listener",
      "name": "0.0.0.0_31400",
      "address": {
       "socket_address": {
        "address": "0.0.0.0",
        "port_value": 31400
       }
      },
      "filter_chains": [
       {
        "filters": [
         {
          "name": "envoy.tcp_proxy",
          "typed_config": {
           "@type": "type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy",
           "stat_prefix": "outbound|9000|v1|tcp-echo.default.svc.cluster.local",
           "cluster": "outbound|9000|v1|tcp-echo.default.svc.cluster.local"
          }
         }
        ]
       }
      ],
      "listener_filters_timeout": "0.100s",
      "traffic_direction": "OUTBOUND",
      "continue_on_listener_filters_timeout": true
     },
     "last_updated": "2019-09-20T20:10:16.268Z"
    }}
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
   "static_route_configs": [
    {
     "route_config": {
      "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "virtual_hosts": [
       {
        "name": "backend",
        "domains": [
         "*"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/stats/prometheus"
          },
          "route": {
           "cluster": "prometheus_stats"
          }
         }
        ]
       }
      ]
     },
     "last_updated": "2019-09-20T20:10:15.875Z"
    }
   ],
   "dynamic_route_configs": [
    {
     "version_info": "2019-09-23T16:01:03Z/23",
     "route_config": {
      "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "name": "http.80",
      "virtual_hosts": [
       {
        "name": "*:80",
        "domains": [
         "*",
         "*:80"
        ],
        "routes": [
         {
          "match": {
           "path": "/productpage",
           "case_sensitive": true
          },
          "route": {
           "cluster": "outbound|9080|v1|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "5",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/productpage"
          }
         },
         {
          "match": {
           "prefix": "/static",
           "case_sensitive": true
          },
          "route": {
           "cluster": "outbound|9080|v1|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "5",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/static*"
          }
         },
         {
          "match": {
           "path": "/login",
           "case_sensitive": true
          },
          "route": {
           "cluster": "outbound|9080|v1|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "5",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/login"
          }
         },
         {
          "match": {
           "path": "/logout",
           "case_sensitive": true
          },
          "route": {
           "cluster": "outbound|9080|v1|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "5",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/logout"
          }
         },
         {
          "match": {
           "prefix": "/api/v1/products",
           "case_sensitive": true
          },
          "route": {
           "cluster": "outbound|9080|v1|productpage.default.svc.cluster.local",
           "timeout": "0s",
           "retry_policy": {
            "retry_on": "connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes",
            "num_retries": 2,
            "retry_host_predicate": [
             {
              "name": "envoy.retry_host_predicates.previous_hosts"
             }
            ],
            "host_selection_retry_max_attempts": "5",
            "retriable_status_codes": [
             503
            ]
           },
           "max_grpc_timeout": "0s"
          },
          "metadata": {
           "filter_metadata": {
            "istio": {
             "config": "/apis/networking/v1alpha3/namespaces/default/virtual-service/bookinfo"
            }
           }
          },
          "decorator": {
           "operation": "productpage.default.svc.cluster.local:9080/api/v1/products*"
          }
         }
        ]
       }
      ],
      "validate_clusters": false
     },
     "last_updated": "2019-09-23T16:01:03.171Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.SecretsConfigDump"
  }
 ]
}
